--- a/PeerConnect/static/styles/create_team.css
+++ b/PeerConnect/static/styles/create_team.css
@@ -50,7 +50,7 @@
     width: 300px;
     height: 100%;
     padding: 20px;
-    background-color: rgb(210, 235, 251);
+    background-color: rgb(255, 235, 212);
     border-radius: 25px;
   }
   
@@ -78,6 +78,7 @@
   
   .team-container .team-box:hover {
     background-color: #007bff; 
+    color: #fff;
   }
   
   .team-container .team-box.selected {
