--- a/PeerConnect/static/styles/create.css
+++ b/PeerConnect/static/styles/create.css
@@ -183,6 +183,24 @@ a {
   background-color: rgb(161, 72, 72);
 }
 
+.edit-course {
+  align-self: center;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  background-color: rgb(123, 172, 122);
+  color: white;
+  padding: 10px;
+  border-radius: 8px;
+  text-align: center;
+  font-size: 16px;
+  cursor: pointer;
+  width: 300px;
+  margin-top: 10px;
+}
+
+.edit-course:hover {
+  background-color: rgb(93, 139, 92);
+}
+
 /*.delete-course img {
   width: 100%; 
   height: 100%;
@@ -214,6 +232,12 @@ a {
 }
 
 #delete-popup:target {
+  display: flex;
+  opacity: 1;
+  pointer-events: auto;
+}
+
+#edit-popup:target {
   display: flex;
   opacity: 1;
   pointer-events: auto;
