--- a/PeerConnect/static/styles/navbar.css
+++ b/PeerConnect/static/styles/navbar.css
@@ -30,7 +30,7 @@
   position: fixed;
   width: 100%;
   height: 45px; /* Reduced from 60px */
-  background-color: #315CEC;
+  background-color: #1E3A5F;
   display: flex;
   align-items: center;
   justify-content: space-between;
