--- a/PeerConnect/static/styles/professor_dashboard.css
+++ b/PeerConnect/static/styles/professor_dashboard.css
@@ -29,7 +29,7 @@
     margin-right: 20px;
     width: 250px;
     padding: 20px;
-    background-color: rgb(210, 235, 251);
+    background-color: #f5e6da;
     border-radius: 25px;
     box-shadow: 0 4px 20px #a2adb9;
     animation: slideInFromLeft 0.6s ease-out;
@@ -38,7 +38,7 @@
   .sidebar .greeting {
     font-size: 24px;
     font-weight: bold;
-    color: #007bff;
+    color: #1e3a5f;
     text-align: center;
     margin-bottom: 20px;
   }
@@ -84,12 +84,12 @@
   }
   
   .course-card {
-    background-color: rgb(255, 235, 212);
+    background-color: #f5e6da;
     box-shadow: 0 4px 20px #a2adb9;
     height: 200px;
     width: 200px;
     margin: 10px;
-    color: rgb(61, 109, 138);
+    color: #1e3a5f;
     font-size: 16px;
     padding: 12px 24px;
     border: none;
@@ -104,19 +104,17 @@
   }
   
   .course-card:hover {
-    background-color: rgb(255, 226, 191);
-    color: rgb(61, 109, 138);
+    background-color: #e07a5f;
   }
   
   .new-course {
     background-color: white;
-    color: rgb(61, 109, 138);
+    color: #1e3a5f;
     font-size: 24px;
     font-weight: bold;
   }
   
   .new-course:hover {
-    color: rgb(61, 109, 138);
     background-color: rgb(238, 238, 238);
   }
   
