--- a/PeerConnect/templates/PeerConnect/create_team.html
+++ b/PeerConnect/templates/PeerConnect/create_team.html
@@ -26,58 +26,34 @@
                             </button>
                         </form>
                     {% endfor %}
-                    <a href="#team-popup"><div class="new-team">Create Team</div></a>
             {% else %}
-                <h1 class="team-title">Start creating teams!</h1>
-                <form method="POST" action="{% url 'save_team' course.id %}" class="team-form">
-                    
-                    {% csrf_token %}
-                    
-                    <div class="form-group">
-                        <label for="team-name">Team Name:</label>
-                        {{ form.name }}
-                    </div>
-            
-                    <div class="form-group">
-                        <label>Members:</label>
-                        <div class="checkbox-group">
-                            {{ form.members }}
-                        </div>
-                    </div>
-
-                    <button type="submit" class="submit-btn">Create Team</button>
-                </form>
+                <h1 class="team-title">Once you start creating teams, they'll appear here!</h1>
             {% endif %}
+        </section>
+        <section class="team-form-container">
+            <h1 class="title">Create a New Team</h1>
+            <form method="POST" action="{% url 'save_team' course.id %}" class="team-form">
+                    
+                {% csrf_token %}
+                
+                <div class="form-group">
+                    <label for="team-name">Team Name:</label>
+                    {{ form.name }}
+                </div>
+        
+                <div class="form-group">
+                    <label>Members:</label>
+                    <div class="checkbox-group">
+                        {{ form.members }}
+                    </div>
+                </div>
+
+                <button type="submit" class="submit-btn">Create Team</button>
+            </form>
         </section>
     {%else %}
         <p>Nothing.</p>
     {% endif %}
 
-    <div id="team-popup" class="modal">
-        <div class="modal-content">
-           <div class="modal-header">
-              <h1 id="team-title">Create a Team</h1>
-              <a href="#" class="close">&times;</a> <!-- Close button -->
-           </div>
-           <form method="POST" action="{% url 'save_team' course.id %}" class="team-form">
-                    
-            {% csrf_token %}
-            
-            <div class="form-group">
-                <label for="team-name">Team Name:</label>
-                {{ form.name }}
-            </div>
-    
-            <div class="form-group">
-                <label>Members:</label>
-                <div class="checkbox-group">
-                    {{ form.members }}
-                </div>
-            </div>
-
-            <button type="submit" class="submit-btn">Create Team</button>
-        </form>
-        </div>
-    </div>
 </body>
 </html>
