--- a/PeerConnect/templates/PeerConnect/create_assessment.html
+++ b/PeerConnect/templates/PeerConnect/create_assessment.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 
 {% block content %}
+{% load static %}  
+
     <h1>Create a New Assessment</h1>
     <form method="POST" action="{% url 'create_assessment' %}">
         {% csrf_token %}
         {{ form.as_p }}
 
+        <div id="questions-container">
+
+        </div>
+
+        <button type="button" id="add-question">Add Question</button>
+        
         <button type="submit">Create Assessment</button>
     </form>
+
+    <script src="{% static 'my_app/questions.js' %}"></script>
+
 {% endblock %}
