--- a/PeerConnect/static/styles/professor_dashboard.css
+++ b/PeerConnect/static/styles/professor_dashboard.css
@@ -117,6 +117,37 @@
   .new-course:hover {
     background-color: rgb(238, 238, 238);
   }
+
+  .assessment-container {
+    align-items: center;
+    justify-content: center;
+    margin-top: 20px;
+  }
+
+  .assessment-container ul {
+    list-style: none;
+    display: flex;
+    flex-direction: row;
+  }
+
+  .assessment-container li {
+    background-color: #f5e6da;
+    box-shadow: 0 4px 20px #a2adb9;
+    padding: 10px 20px;
+    margin: 10px 0;
+    border-radius: 8px;
+    width: 80%; /* Adjust width as needed */
+    text-align: center;
+    font-size: 16px;
+    color: #1e3a5f;
+    transition: background-color 0.3s ease;
+    cursor: pointer;
+  }
+
+  .assessment-container a {
+    text-decoration: none; /* Removes underline */
+    color: #1e3a5f; /* Ensures the link color matches the card text */
+  }
   
   /* Modal background overlay */
 .modal {
