--- a/PeerConnect/templates/PeerConnect/create_assessment.html
+++ b/PeerConnect/templates/PeerConnect/create_assessment.html
@@ -3,6 +3,7 @@
 {% block content %}
 {% load static %}  
 
+<div class="assessment-container">
     <h1>Create a New Assessment</h1>
     <form method="POST" action="{% url 'create_assessment' %}">
         {% csrf_token %}
@@ -10,9 +11,10 @@
 
         <div id="questions-container"></div>
 
-    <button type="button" id="add-question">Add Question</button>
+        <button type="button" id="add-question">Add Question</button>
         <button type="submit">Create Assessment</button>
     </form>
+</div>
     
-    <script src="{% static 'styles/PeerConnect/js/questions.js' %}"></script>
+<script src="{% static 'styles/PeerConnect/js/questions.js' %}"></script>
 {% endblock %}
