--- a/PeerConnect/templates/PeerConnect/create_assessment.html
+++ b/PeerConnect/templates/PeerConnect/create_assessment.html
@@ -8,10 +8,18 @@
     <form method="POST" action="{% url 'create_assessment' %}">
         {% csrf_token %}
         {{ form.as_p }}
+        {{ formset.management_form }}
+        
+        <div id="questions-container">
+            {% for subform in formset %}
+                <div class="question-form">
+                    {{ subform.as_p }}
+                </div>
+            {% endfor %}
+        </div>
 
-        <div id="questions-container"></div>
 
-        <button type="button" id="add-question">Add Question</button>
+    <button type="button" id="add-question">Add Question</button>
         <button type="submit">Create Assessment</button>
     </form>
 </div>
