--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -33,7 +33,7 @@
                     <p>No assessments available.</p>
                 {% endif %}
             </div>
-            <button><a href="{% url 'create_assessment' %}" class="create-assessments-link">Create Assessments</a></button>
+            <button class="create-assessments-btn"><a href="{% url 'create_assessment' %}" class="create-assessments-link"> Create Assessment</a></button>
         </div>
     </div>
 
