--- a/PeerConnect/static/styles/create_assessment.css
+++ b/PeerConnect/static/styles/create_assessment.css
@@ -198,7 +198,7 @@ body {
 }
 
 /* Create Assessment Button */
-button[type="submit"] {
+.assessment-container button[type="submit"] {
   background-color: var(--primary-color);
   color: white;
   border: none;
@@ -211,7 +211,7 @@ button[type="submit"] {
   margin-top: 10px;
 }
 
-button[type="submit"]:hover {
+.assessment-container button[type="submit"]:hover {
   background-color: #2548c7;
 }
 
