added styling, view assessment form, and improved assessment model

--- a/PeerConnect/templates/PeerConnect/professor_dashboard.html
+++ b/PeerConnect/templates/PeerConnect/professor_dashboard.html
@@ -26,6 +26,7 @@
                         {% for assessment in assessments %}
                             <li>
                                 <a href="{% url 'view_assessment' assessment.id %}">{{ assessment.name }}</a>
+                                <p id="due-date">{{ assessment.due_date }}</p>
                             </li>
                         {% endfor %}
                     </ul>
