--- a/PeerConnect/templates/PeerConnect/view_assessment.html
+++ b/PeerConnect/templates/PeerConnect/view_assessment.html
@@ -2,6 +2,14 @@
 {% load static %}
 
 {% block content %}
-<p>{{ 'name' }}</p>
+<script src="{% static 'styles/PeerConnect/view_assessment.css' %}"></script>
+<p>{{ assessment.name }}</p>
+<div class="qualitive">
+    <h2>Qualitative Questions</h2>
+</div>
 
+<div class="quantitative">
+    <h2>Quantitative Questions</h2>
+    {{ assessment.questions }}
+</div>
 {% endblock %}
