--- a/PeerConnect/static/styles/professor_dashboard.css
+++ b/PeerConnect/static/styles/professor_dashboard.css
@@ -136,17 +136,28 @@
     padding: 10px 20px;
     margin: 10px 0;
     border-radius: 8px;
-    width: 80%; /* Adjust width as needed */
+    width: 100%; 
     text-align: center;
     font-size: 16px;
     color: #1e3a5f;
     transition: background-color 0.3s ease;
     cursor: pointer;
+    flex-wrap: wrap;
   }
 
   .assessment-container a {
-    text-decoration: none; /* Removes underline */
-    color: #1e3a5f; /* Ensures the link color matches the card text */
+    text-decoration: none; 
+    color: #1e3a5f; 
+  }
+
+  #due-date {
+    font-size: 10px;
+    color: #1e3a5f;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: auto;
   }
 
   .create-assessments-btn {
